--- a/index.html
+++ b/index.html
@@ -137,6 +137,8 @@
             font-weight: 600;
             transition: all 0.3s ease;
             box-shadow: 0 4px 15px rgba(253, 160, 133, 0.4);
+            border: none;
+            cursor: pointer;
         }
 
         .btn:hover {
@@ -165,11 +167,107 @@
             100% { transform: scale(3); opacity: 0; }
         }
 
+        /* Form Styles */
+        .form-card {
+            text-align: left;
+        }
+
+        .form-card h2 {
+            font-family: 'Playfair Display', serif;
+            font-size: 1.8rem;
+            text-align: center;
+            margin-bottom: 30px;
+            color: #fda085;
+        }
+
+        .form-group {
+            margin-bottom: 24px;
+        }
+
+        .form-group label {
+            display: block;
+            font-size: 0.9rem;
+            color: #a0aec0;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            margin-bottom: 8px;
+        }
+
+        .form-group input,
+        .form-group textarea {
+            width: 100%;
+            padding: 14px 18px;
+            background: rgba(255, 255, 255, 0.1);
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            border-radius: 12px;
+            color: #fff;
+            font-family: 'Inter', sans-serif;
+            font-size: 1rem;
+            transition: all 0.3s ease;
+        }
+
+        .form-group input:focus,
+        .form-group textarea:focus {
+            outline: none;
+            border-color: #fda085;
+            background: rgba(255, 255, 255, 0.15);
+        }
+
+        .form-group input::placeholder,
+        .form-group textarea::placeholder {
+            color: #718096;
+        }
+
+        .form-group textarea {
+            resize: vertical;
+            min-height: 80px;
+        }
+
+        .form-group small {
+            display: block;
+            margin-top: 6px;
+            color: #718096;
+            font-size: 0.85rem;
+        }
+
+        .submit-btn {
+            width: 100%;
+            margin-top: 10px;
+        }
+
+        .drink-icon {
+            font-size: 1.5rem;
+            margin-right: 8px;
+        }
+
+        .section-divider {
+            display: flex;
+            align-items: center;
+            margin: 20px 0;
+            color: #718096;
+        }
+
+        .section-divider::before,
+        .section-divider::after {
+            content: '';
+            flex: 1;
+            height: 1px;
+            background: rgba(255, 255, 255, 0.2);
+        }
+
+        .section-divider span {
+            padding: 0 15px;
+            font-size: 0.85rem;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+        }
+
         @media (max-width: 480px) {
             h1 { font-size: 2.2rem; }
             .emoji-header { font-size: 3rem; }
             .detail-value { font-size: 1.2rem; }
             .card { padding: 30px 20px; }
+            .form-card h2 { font-size: 1.5rem; }
         }
     </style>
 </head>
@@ -203,9 +301,47 @@
             </div>
         </div>
 
-        <a href="https://maps.app.goo.gl/X24yjwkWTCBTToRo8" target="_blank" class="btn">
+        <a href="https://maps.app.goo.gl/X24yjwkWTCBTToRo8" target="_blank" class="btn" style="margin-bottom: 30px;">
             <span>📍</span> Get Directions
         </a>
+
+        <!-- RSVP Form -->
+        <div class="card form-card">
+            <h2>🍻 RSVP</h2>
+            
+            <form action="https://formsubmit.co/YOUR_EMAIL_HERE" method="POST">
+                <!-- FormSubmit config -->
+                <input type="hidden" name="_subject" value="🎂 New RSVP for your birthday!">
+                <input type="hidden" name="_captcha" value="false">
+                <input type="hidden" name="_template" value="table">
+                <input type="hidden" name="_next" value="https://akshtjain.github.io/aksht-birthday-2026/thanks.html">
+                
+                <div class="form-group">
+                    <label for="name">Your Name</label>
+                    <input type="text" id="name" name="name" placeholder="Enter your name" required>
+                </div>
+
+                <div class="section-divider">
+                    <span>🥃 Drinks</span>
+                </div>
+
+                <div class="form-group">
+                    <label for="drink-preference"><span class="drink-icon">🍷</span> What do you want to drink?</label>
+                    <input type="text" id="drink-preference" name="drink_preference" placeholder="e.g., Whiskey, Beer, Wine, Vodka...">
+                    <small>Let us know your preference so we're stocked up!</small>
+                </div>
+
+                <div class="form-group">
+                    <label for="bringing"><span class="drink-icon">🎁</span> What will you bring?</label>
+                    <input type="text" id="bringing" name="bringing" placeholder="e.g., A bottle of Old Monk, Some beers...">
+                    <small>Contributions welcome but not required!</small>
+                </div>
+
+                <button type="submit" class="btn submit-btn">
+                    <span>🎉</span> Count Me In!
+                </button>
+            </form>
+        </div>
 
         <p class="footer">See you there! 🥳</p>
     </div>
