--- a/thanks.html
+++ b/thanks.html
@@ -120,7 +120,11 @@
             <div class="reminder-value">Feb 25 · 9 PM</div>
         </div>
         
-        <a href="https://maps.app.goo.gl/X24yjwkWTCBTToRo8" target="_blank" class="btn">Get Directions</a>
+        <a href="wishlist.html" class="btn">View Wishlist</a>
+        
+        <div style="margin-top: 20px;">
+            <a href="https://maps.app.goo.gl/X24yjwkWTCBTToRo8" target="_blank" style="color: #555; font-size: 0.8rem; text-decoration: none; border-bottom: 1px solid #333;">Get Directions</a>
+        </div>
     </div>
 </body>
 </html>
