--- a/thanks.html
+++ b/thanks.html
@@ -102,6 +102,38 @@
             color: #0a0a0a;
             border-color: #fff;
         }
+
+        .easter-egg {
+            display: none;
+            margin-top: 40px;
+            animation: fadeIn 0.5s ease-out;
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(10px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+
+        .easter-egg-gallery {
+            display: flex;
+            gap: 12px;
+            justify-content: center;
+            flex-wrap: wrap;
+            margin-bottom: 12px;
+        }
+
+        .easter-egg-gallery img {
+            width: 150px;
+            height: 150px;
+            object-fit: cover;
+            border-radius: 8px;
+        }
+
+        .easter-egg-caption {
+            font-size: 0.85rem;
+            color: #555;
+            font-style: italic;
+        }
     </style>
 </head>
 <body>
@@ -125,6 +157,23 @@
         <div style="margin-top: 20px;">
             <a href="https://maps.app.goo.gl/X24yjwkWTCBTToRo8" target="_blank" style="color: #555; font-size: 0.8rem; text-decoration: none; border-bottom: 1px solid #333;">Get Directions</a>
         </div>
+
+        <!-- Easter egg for Mehul -->
+        <div id="mehul-easter-egg" class="easter-egg">
+            <div class="easter-egg-gallery">
+                <img src="mehul1.jpg" alt="">
+                <img src="mehul2.jpg" alt="">
+            </div>
+            <p class="easter-egg-caption">Miss you bro 🫶</p>
+        </div>
     </div>
+
+    <script>
+        // Check if it's Mehul
+        const guestName = localStorage.getItem('guestName') || '';
+        if (guestName.toLowerCase().includes('mehul')) {
+            document.getElementById('mehul-easter-egg').style.display = 'block';
+        }
+    </script>
 </body>
 </html>
