--- a/thanks.html
+++ b/thanks.html
@@ -164,7 +164,7 @@
                 <img src="mehul1.jpg" alt="">
                 <img src="mehul2.jpg" alt="">
             </div>
-            <p class="easter-egg-caption">Miss you bro 🫶</p>
+            <p class="easter-egg-caption">Sleeping beauty 😴</p>
         </div>
     </div>
 
