Mitron! Happy Birthday Bhai! 🇮🇳

--- a/index.html
+++ b/index.html
@@ -30,29 +30,13 @@
 
         .header {
             text-align: center;
-            margin-bottom: 60px;
+            margin-bottom: 40px;
         }
 
-        .date-badge {
-            display: inline-block;
-            font-size: 0.75rem;
-            letter-spacing: 3px;
-            text-transform: uppercase;
-            color: #888;
-            margin-bottom: 24px;
-        }
-
-        h1 {
-            font-family: 'Cormorant Garamond', serif;
-            font-size: 3.5rem;
-            font-weight: 400;
-            letter-spacing: -1px;
-            margin-bottom: 16px;
-        }
-
-        .tagline {
-            color: #666;
-            font-size: 1rem;
+        .hero-image {
+            width: 100%;
+            max-width: 400px;
+            border-radius: 12px;
         }
 
         .details {
@@ -232,9 +216,7 @@
 <body>
     <div class="container">
         <header class="header">
-            <div class="date-badge">February 26, 2026</div>
-            <h1>Aksht turns a year older</h1>
-            <p class="tagline">Join us for drinks and good company</p>
+            <img src="hero.jpg" alt="Nation Celebrates" class="hero-image">
         </header>
 
         <!-- Easter egg for the squad -->
