--- a/wishlist.html
+++ b/wishlist.html
@@ -30,7 +30,14 @@
 
         .header {
             text-align: center;
-            margin-bottom: 50px;
+            margin-bottom: 40px;
+        }
+
+        .meme-image {
+            width: 100%;
+            max-width: 500px;
+            border-radius: 8px;
+            margin: 20px 0;
         }
 
         .back-link {
@@ -250,6 +257,7 @@
     <div class="container">
         <header class="header">
             <a href="index.html" class="back-link">← Back to invite</a>
+            <img src="meme.jpg" alt="The legend" class="meme-image">
             <h1>Wishlist</h1>
         </header>
 
