Update time to 8pm, full address, easier navigation

--- a/index.html
+++ b/index.html
@@ -274,13 +274,15 @@
         <section class="details">
             <div class="detail-row">
                 <span class="detail-label">When</span>
-                <span class="detail-value">Tuesday, Feb 25th — 9 PM</span>
+                <span class="detail-value">Tuesday, Feb 25th — 8 PM</span>
             </div>
             <div class="detail-row">
                 <span class="detail-label">Where</span>
                 <span class="detail-value">
                     <a href="https://maps.app.goo.gl/X24yjwkWTCBTToRo8" target="_blank" class="location-link">
-                        16038, Prestige Shantiniketan<br>Whitefield
+                        T-16 16038, Prestige Shantiniketan<br>
+                        Whitefield Main Road, Hoodi<br>
+                        <small style="color: #666; font-size: 0.85rem;">Tap for directions →</small>
                     </a>
                 </span>
             </div>
