--- a/wishlist.html
+++ b/wishlist.html
@@ -272,7 +272,7 @@
 
         <footer class="footer">
             <p>No pressure — your presence is the real gift</p>
-            <a href="https://maps.app.goo.gl/X24yjwkWTCBTToRo8" target="_blank">Get directions to the party</a>
+            <a href="https://maps.app.goo.gl/X24yjwkWTCBTToRo8" target="_blank">📍 T-16 16038, Prestige Shantiniketan, Whitefield → Get directions</a>
         </footer>
     </div>
 
