--- a/index.html
+++ b/index.html
@@ -286,6 +286,11 @@
                     </a>
                 </span>
             </div>
+            <div class="detail-row" style="flex-direction: column; align-items: center; gap: 12px; padding-top: 24px;">
+                <span class="detail-label" style="text-align: center;">Entry Pass</span>
+                <img src="entry-qr.jpg" alt="Entry QR Code" style="width: 180px; border-radius: 8px;">
+                <small style="color: #555; font-size: 0.8rem; text-align: center;">Show this at the gate</small>
+            </div>
             <div class="detail-row">
                 <span class="detail-label">Dress Code</span>
                 <span class="detail-value">Come as you are</span>
