--- a/index.html
+++ b/index.html
@@ -417,7 +417,9 @@
         </section>
 
         <footer class="footer">
-            <a href="wishlist.html" style="color: #666; text-decoration: none; border-bottom: 1px solid #333; transition: all 0.2s;">View the wishlist</a>
+            <a href="wishlist.html" style="color: #666; text-decoration: none; border-bottom: 1px solid #333; transition: all 0.2s; display: inline-block; margin-bottom: 12px;">View the wishlist</a>
+            <br>
+            <a href="#" onclick="openLocationModal(); return false;" style="color: #555; text-decoration: none; border-bottom: 1px solid #222; font-size: 0.8rem;">📍 Get directions</a>
         </footer>
     </div>
 
