--- a/wishlist.html
+++ b/wishlist.html
@@ -251,6 +251,95 @@
             .wishlist-item { flex-direction: column; align-items: flex-start; gap: 12px; }
             .item-status { align-self: flex-start; }
         }
+
+        /* Location Modal */
+        .modal-overlay {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.9);
+            z-index: 1000;
+            justify-content: center;
+            align-items: center;
+            padding: 20px;
+        }
+
+        .modal-overlay.active {
+            display: flex;
+        }
+
+        .modal-content {
+            background: #111;
+            border-radius: 16px;
+            padding: 32px;
+            max-width: 400px;
+            width: 100%;
+            text-align: center;
+            position: relative;
+        }
+
+        .modal-close {
+            position: absolute;
+            top: 16px;
+            right: 20px;
+            background: none;
+            border: none;
+            color: #666;
+            font-size: 1.5rem;
+            cursor: pointer;
+            transition: color 0.2s;
+        }
+
+        .modal-close:hover {
+            color: #fff;
+        }
+
+        .modal-title {
+            font-family: 'Cormorant Garamond', serif;
+            font-size: 1.8rem;
+            margin-bottom: 24px;
+        }
+
+        .modal-address {
+            font-size: 1rem;
+            color: #ccc;
+            line-height: 1.6;
+            margin-bottom: 24px;
+        }
+
+        .modal-qr {
+            width: 200px;
+            border-radius: 12px;
+            margin-bottom: 8px;
+        }
+
+        .modal-qr-label {
+            font-size: 0.8rem;
+            color: #666;
+            margin-bottom: 24px;
+        }
+
+        .modal-btn {
+            display: block;
+            width: 100%;
+            padding: 16px;
+            background: #fff;
+            color: #0a0a0a;
+            text-decoration: none;
+            border-radius: 8px;
+            font-size: 0.85rem;
+            font-weight: 500;
+            letter-spacing: 1px;
+            text-transform: uppercase;
+            transition: background 0.2s;
+        }
+
+        .modal-btn:hover {
+            background: #e0e0e0;
+        }
     </style>
 </head>
 <body>
@@ -272,8 +361,26 @@
 
         <footer class="footer">
             <p>No pressure — your presence is the real gift</p>
-            <a href="https://maps.app.goo.gl/X24yjwkWTCBTToRo8" target="_blank">📍 T-16 16038, Prestige Shantiniketan, Whitefield → Get directions</a>
+            <a href="#" onclick="openLocationModal(); return false;" style="color: #666; text-decoration: none; border-bottom: 1px solid #333;">📍 T-16 16038, Prestige Shantiniketan, Whitefield → Get directions</a>
         </footer>
+    </div>
+
+    <!-- Location Modal -->
+    <div id="location-modal" class="modal-overlay" onclick="closeLocationModal(event)">
+        <div class="modal-content" onclick="event.stopPropagation()">
+            <button class="modal-close" onclick="closeLocationModal()">&times;</button>
+            <h3 class="modal-title">Getting There</h3>
+            <p class="modal-address">
+                T-16 16038, Prestige Shantiniketan<br>
+                Whitefield Main Road, Hoodi<br>
+                Sadara Mangala Industrial Area<br>
+                Thigalarapalya, Krishnarajapura<br>
+                Bengaluru, Karnataka 560048
+            </p>
+            <img src="entry-qr.jpg" alt="Entry QR" class="modal-qr">
+            <p class="modal-qr-label">Show this QR at the gate</p>
+            <a href="https://maps.app.goo.gl/X24yjwkWTCBTToRo8" target="_blank" class="modal-btn">Open in Google Maps</a>
+        </div>
     </div>
 
     <!-- Firebase SDK -->
@@ -523,6 +630,19 @@
         }
 
         init();
+
+        // Location Modal functions
+        function openLocationModal() {
+            document.getElementById('location-modal').classList.add('active');
+            document.body.style.overflow = 'hidden';
+        }
+
+        function closeLocationModal(e) {
+            if (!e || e.target === document.getElementById('location-modal') || e.target.classList.contains('modal-close')) {
+                document.getElementById('location-modal').classList.remove('active');
+                document.body.style.overflow = '';
+            }
+        }
     </script>
 </body>
 </html>
