Fix drink chip text visibility + add Other option

--- a/index.html
+++ b/index.html
@@ -183,6 +183,9 @@
         .drink-chip:has(input:checked) {
             background: #fff;
             border-color: #fff;
+        }
+
+        .drink-chip:has(input:checked) span {
             color: #0a0a0a;
         }
 
@@ -403,6 +406,7 @@
                             <label class="drink-chip"><input type="checkbox" name="drink" value="Tequila"> <span>Tequila</span></label>
                             <label class="drink-chip"><input type="checkbox" name="drink" value="Non-alcoholic"> <span>Mocktails</span></label>
                             <label class="drink-chip"><input type="checkbox" name="drink" value="Surprise me"> <span>Surprise me</span></label>
+                            <label class="drink-chip"><input type="checkbox" name="drink" value="Other"> <span>Other</span></label>
                         </div>
                     </div>
                     <div class="form-group">
