--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
                             <label class="drink-chip"><input type="checkbox" name="drink" value="Tequila"> <span>Tequila</span></label>
                             <label class="drink-chip"><input type="checkbox" name="drink" value="Non-alcoholic"> <span>Mocktails</span></label>
                             <label class="drink-chip"><input type="checkbox" name="drink" value="Surprise me"> <span>Surprise me</span></label>
-                            <label class="drink-chip"><input type="checkbox" name="drink" value="Other"> <span>Other</span></label>
+                            <label class="drink-chip"><input type="checkbox" name="drink" value="Greens"> <span>Greens</span></label>
                         </div>
                     </div>
                     <div class="form-group">
