--- a/wishlist.html
+++ b/wishlist.html
@@ -129,12 +129,25 @@
         .item-name a {
             color: inherit;
             text-decoration: none;
-            border-bottom: 1px solid #333;
-            transition: border-color 0.2s;
+            border-bottom: 1px solid #444;
+            transition: all 0.2s;
+            padding-bottom: 2px;
         }
 
         .item-name a:hover {
             border-color: #fff;
+            color: #fff;
+        }
+
+        .item-name a::after {
+            content: " →";
+            color: #666;
+            font-size: 0.9em;
+            transition: color 0.2s;
+        }
+
+        .item-name a:hover::after {
+            color: #fff;
         }
 
         .item-price {
