Update cable organizer to new product link

--- a/wishlist.html
+++ b/wishlist.html
@@ -433,9 +433,9 @@
             },
             {
                 id: 'cable-organizer',
-                name: 'Elfora Cable Organizer Bag',
+                name: 'Elfora Travel Cable Organizer Pouch',
                 price: '₹499',
-                url: 'https://www.amazon.in/dp/B0F18WNN3J',
+                url: 'https://www.amazon.in/dp/B0DVGK4PJZ',
                 category: 'Tech'
             },
             {
