Remove 2 pouches, add new Elfora Accessories Organizer

--- a/wishlist.html
+++ b/wishlist.html
@@ -441,13 +441,6 @@
                 category: 'Everyday'
             },
             {
-                id: 'cable-organizer',
-                name: 'Elfora Travel Cable Organizer Pouch',
-                price: '₹499',
-                url: 'https://www.amazon.in/dp/B0DVGK4PJZ',
-                category: 'Tech'
-            },
-            {
                 id: 'ambrane-powerbank',
                 name: 'Ambrane 10000mAh Slim Powerbank',
                 price: '₹699',
@@ -459,6 +452,13 @@
                 name: 'URBN 10000mAh MagSafe Wireless Power Bank',
                 price: '₹1,499',
                 url: 'https://www.amazon.in/dp/B0FB99VQCT',
+                category: 'Tech'
+            },
+            {
+                id: 'elfora-accessories',
+                name: 'Elfora Accessories Organizer',
+                price: '₹499',
+                url: 'https://www.amazon.in/dp/B0FH2KYYXR',
                 category: 'Tech'
             },
             {
@@ -474,13 +474,6 @@
                 price: '₹349',
                 url: 'https://www.amazon.in/dp/B0BRY2QD6H',
                 category: 'Tools'
-            },
-            {
-                id: 'tech-kit-organiser',
-                name: 'DailyObjects Tech Kit Organiser',
-                price: '₹1,999',
-                url: 'https://www.amazon.in/dp/B0CRF4FHWX',
-                category: 'Tech'
             },
             {
                 id: 'hard-thing-book',
